# rust_JNI_Android_example_wrapper

android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/android/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  lib_example.rs  lib_sss.rs
